refactor: rename hopf_angles module to uniform_so3_sampling and update references

--- a/examples/generating_so3_angles.ipynb
+++ b/examples/generating_so3_angles.ipynb
@@ -9,25 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch_so3.hopf_angles import get_uniform_euler_angles"
+    "from torch_so3.uniform_so3_sampling import get_uniform_euler_angles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1665792, 3])"
+       "torch.Size([1584480, 3])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,42 +42,42 @@
     "    theta_max=180.0,\n",
     "    psi_min=0.0,\n",
     "    psi_max=360.0,\n",
-    "    base_grid_method=\"healpix\",\n",
+    "    base_grid_method=\"uniform\",\n",
     ")\n",
     "angles.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[  1.9493,  45.0000,   0.0000],\n",
-       "        [  1.9493, 135.0000,   0.0000],\n",
-       "        [  1.9493, 225.0000,   0.0000],\n",
-       "        [  1.9493, 315.0000,   0.0000],\n",
-       "        [  3.8992,  22.5000,   0.0000],\n",
-       "        [  3.8992,  67.5000,   0.0000],\n",
-       "        [  3.8992, 112.5000,   0.0000],\n",
-       "        [  3.8992, 157.5000,   0.0000],\n",
-       "        [  3.8992, 202.5000,   0.0000],\n",
-       "        [  3.8992, 247.5000,   0.0000],\n",
-       "        [  3.8992, 292.5000,   0.0000],\n",
-       "        [  3.8992, 337.5000,   0.0000],\n",
-       "        [  5.8503,  15.0000,   0.0000],\n",
-       "        [  5.8503,  45.0000,   0.0000],\n",
-       "        [  5.8503,  75.0000,   0.0000],\n",
-       "        [  5.8503, 105.0000,   0.0000],\n",
-       "        [  5.8503, 135.0000,   0.0000],\n",
-       "        [  5.8503, 165.0000,   0.0000],\n",
-       "        [  5.8503, 195.0000,   0.0000],\n",
-       "        [  5.8503, 225.0000,   0.0000]], dtype=torch.float64)"
+       "tensor([[  0.0000,   0.0000,   0.0000],\n",
+       "        [  2.5000,   0.0000,   0.0000],\n",
+       "        [  2.5000,  60.0000,   0.0000],\n",
+       "        [  2.5000, 120.0000,   0.0000],\n",
+       "        [  2.5000, 180.0000,   0.0000],\n",
+       "        [  2.5000, 240.0000,   0.0000],\n",
+       "        [  2.5000, 300.0000,   0.0000],\n",
+       "        [  5.0000,   0.0000,   0.0000],\n",
+       "        [  5.0000,  27.6923,   0.0000],\n",
+       "        [  5.0000,  55.3846,   0.0000],\n",
+       "        [  5.0000,  83.0769,   0.0000],\n",
+       "        [  5.0000, 110.7692,   0.0000],\n",
+       "        [  5.0000, 138.4615,   0.0000],\n",
+       "        [  5.0000, 166.1538,   0.0000],\n",
+       "        [  5.0000, 193.8462,   0.0000],\n",
+       "        [  5.0000, 221.5385,   0.0000],\n",
+       "        [  5.0000, 249.2308,   0.0000],\n",
+       "        [  5.0000, 276.9231,   0.0000],\n",
+       "        [  5.0000, 304.6154,   0.0000],\n",
+       "        [  5.0000, 332.3077,   0.0000]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
