Change names tobe explicit about steps

--- a/examples/generating_so3_angles.ipynb
+++ b/examples/generating_so3_angles.ipynb
@@ -34,8 +34,8 @@
    ],
    "source": [
     "angles = get_uniform_euler_angles(\n",
-    "    in_plane_step=1.5,\n",
-    "    out_of_plane_step=2.5,\n",
+    "    psi_step=1.5,\n",
+    "    theta_step=2.5,\n",
     "    phi_min=0.0,\n",
     "    phi_max=360.0,\n",
     "    theta_min=0.0,\n",
