fix: comment from review

--- a/examples/visualizing_s2_grids.ipynb
+++ b/examples/visualizing_s2_grids.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Visualizing base S2 grids\n",
     "\n",
-    "The `torch-so3` package uses the uniform sampling to generate Euler angles that sample the 3D rotation group SO(3) uniformly."
+    "The `torch-so3` package implements uniform sampling techniques to generate Euler angles that sample the 3D rotation group SO(3) uniformly."
    ]
   },
   {
